# sonipredict

./: .bumpversion.cfg  .cruft.json  .flake8  CONTRIBUTING.rst  LICENSE  README.md  setup.cfg  tox.ini
.github/workflows/: release.yml
docs/: Makefile
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
notebooks/: 20220505_replot.ipynb  20220505_replot_shap.ipynb
src/sonipredict/: __init__.py  cli.py  definitions.py  ensemble.py  utils.py  version.py
src/sonipredict/data/: AllSizes_allRuns.csv
tests/: __init__.py  test_version.py
