##########################
# Setup.py Configuration #
##########################
[metadata]
name = sonipredict
version = 0.0.1-dev
description = Predict agglomerate sizes after sonication
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/TineGlaubitz/sonipredict
download_url = https://github.com/TineGlaubitz/sonipredict/releases
project_urls =
    Bug Tracker = https://github.com/TineGlaubitz/sonipredict/issues
    Source Code = https://github.com/TineGlaubitz/sonipredict

# Author information
author = Christina Glaubitz
author_email = christina.glaubitz@unifr.ch
maintainer = Christina Glaubitz
maintainer_email = christina.glaubitz@unifr.ch

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =

[options]
install_requires =
    optuna
    scikit-learn
    xgboost
    pandas 
    matplotlib
    xlrd
    openpyxl
    shap
    pandas-profiling 
    click

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
lint = 
    isort
    black
    flake8
    pre-commit
    bumpversion
tests =
    pytest
    tox
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    # To include LaTeX comments easily in your docs. 
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext

[options.entry_points]
console_scripts =
    sonipredict.tune_pred = sonipredict.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = sonipredict
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/sonipredict
    .tox/*/lib/python*/site-packages/sonipredict

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
